--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Repositório do projeto v2 do curso de testes automatizados com Cypress (intermdiário) da Escola TAT no Udemy",
   "main": "cypress.config.js",
   "scripts": {
-    "test": "cypress run"
+    "test": "cypress run",
+    "cy:open": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -22,8 +23,8 @@
   },
   "homepage": "https://github.com/wlsf82/cypress-intermediario-v2#readme",
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "cypress": "^13.11.0",
-    "cypress-plugin-api": "^2.11.1",
-    "faker": "^5.5.3"
+    "cypress-plugin-api": "^2.11.1"
   }
 }
